# hipaa-safe-form-extraction

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Qwen_main_82_Accuracy.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  demo_core.py  streamlit_app.py
data/sample/: README.md
docs/: ARCHITECTURE.md  ROADMAP.md  WRITEUP.md  make_explainer.py
eval/: README.md  __init__.py  ablations.py  generate_synthetic_forms.py  metrics.py  predictors.py  reporting.py  run_eval.py
eval/ground_truth/: labels.jsonl
eval/reports/: metrics.md
legacy/: README.md
src/formextract/: __init__.py  backends.py  checkbox.py  cli.py  config.py  logging_utils.py  ocr.py  parsing.py  pipeline.py  preprocessing.py  schema.py  vlm.py
src/formextract/prompts/: extraction_prompt.xml
tests/: test_backends.py  test_checkbox_rules.py  test_demo_core.py  test_metrics.py  test_parsing.py  test_preprocessing.py
