[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formextract"
version = "0.1.0"
description = "Privacy-first, fully-local document AI: structured field extraction from handwritten compliance forms with a vision-language model + classical CV."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vikram Kavuri" }]
keywords = [
    "document-ai", "vision-language-model", "vlm", "qwen", "ocr",
    "structured-extraction", "constrained-decoding", "hipaa", "privacy", "ollama",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "pymupdf>=1.23",          # imported as `fitz`
    "pytesseract>=0.3.10",
    "ollama>=0.3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
eval = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "rapidfuzz>=3.6",        # fast normalized edit distance for free-text fields
    "tabulate>=0.9",
]
demo = [
    "streamlit>=1.36",
]

[project.scripts]
formextract = "formextract.cli:app"

[project.urls]
Homepage = "https://github.com/VikramKavur/privacy-first-document-ai"
Repository = "https://github.com/VikramKavur/privacy-first-document-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
formextract = ["prompts/*.xml"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Typer's API *requires* calling Option()/Argument() in parameter defaults.
"src/formextract/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true   # cv2/fitz/ollama ship no stubs
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
